# zope.event

./: .bzrignore  .coveragerc  .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  INSTALL.txt  MANIFEST.in  README.rst  README.txt  bootstrap.py  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  api.rst  classhandler.rst  conf.py  hacking.rst  index.rst  make.bat  theory.rst  usage.rst
src/zope/event/: README.txt  __init__.py  classhandler.py  tests.py
src/zope/i18nmessageid/: DEPENDENCIES.cfg  SETUP.cfg  __init__.py  _zope_i18nmessageid_message.c  message.py  messageid.py  messages.txt  tests.py
